{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 195,
  "lineage": "3ff1311b-17f9-487d-4daf-fe9d19aa5004",
  "resources": [
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07cf58fed16b6fbf9",
            "public_dns": "ec2-13-250-250-152.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.250.152",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a47eb5f85b07481e",
            "arn": "arn:aws:ec2:ap-southeast-1:866404760327:instance/i-088acfd3e03a69b66",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "tripbff-prod_ecs_instance_profile",
            "id": "i-088acfd3e03a69b66",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tripbff-inte-kp",
            "monitoring": false,
            "primary_network_interface_id": "eni-09d195ca300fc65fb",
            "private_dns": "ip-10-0-0-242.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b7a08ba8a8d762e2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f9eb2c7b931d7ff",
            "tags": {
              "Cluster": "tripbff",
              "Environment": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081626952c83126f0"
            ]
          },
          "dependencies": [
            "module.this.module.instances.aws_security_group.mesh-vpc-security-group",
            "module.this.module.instances.aws_subnet.mesh-vpc-subnet1",
            "module.this.module.instances.aws_vpc.mesh-vpc",
            "module.this.module.instances.module.ec2-profile.aws_iam_instance_profile.this",
            "module.this.module.instances.module.ec2-profile.aws_iam_role.this"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mesh-vpc-internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c5791f5c9ba342c3",
            "owner_id": "866404760327",
            "tags": {
              "Name": "mesh-vpc-internet-gateway"
            },
            "vpc_id": "vpc-0fdd7e18104518693"
          },
          "dependencies": [
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-055b1cb708a60600b",
            "private_dns_name": "ip-10-0-0-167.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.167",
            "private_ips": [
              "10.0.0.167"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a1d067d733ee8742"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f9eb2c7b931d7ff",
            "tags": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "module.this.module.instances.aws_subnet.mesh-vpc-subnet1",
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-06ff73a5d311be2ce",
            "private_dns_name": "ip-10-0-1-73.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.73",
            "private_ips": [
              "10.0.1.73"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a1d067d733ee8742"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe7f95b15f4677c4",
            "tags": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "module.this.module.instances.aws_subnet.mesh-vpc-subnet2",
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mesh-vpc-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b795481a2e4610a3",
            "owner_id": "866404760327",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5791f5c9ba342c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mesh-vpc-route-table"
            },
            "vpc_id": "vpc-0fdd7e18104518693"
          },
          "dependencies": [
            "module.this.module.instances.aws_internet_gateway.mesh-vpc-internet-gateway",
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mesh-vpc-route-table-association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb3d39222e91955e",
            "route_table_id": "rtb-0b795481a2e4610a3",
            "subnet_id": "subnet-08f9eb2c7b931d7ff"
          },
          "dependencies": [
            "module.this.module.instances.aws_internet_gateway.mesh-vpc-internet-gateway",
            "module.this.module.instances.aws_route_table.mesh-vpc-route-table",
            "module.this.module.instances.aws_subnet.mesh-vpc-subnet1",
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mesh-vpc-route-table-association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be87cda15bf80499",
            "route_table_id": "rtb-0b795481a2e4610a3",
            "subnet_id": "subnet-0fe7f95b15f4677c4"
          },
          "dependencies": [
            "module.this.module.instances.aws_internet_gateway.mesh-vpc-internet-gateway",
            "module.this.module.instances.aws_route_table.mesh-vpc-route-table",
            "module.this.module.instances.aws_subnet.mesh-vpc-subnet2",
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mesh-vpc-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866404760327:security-group/sg-081626952c83126f0",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081626952c83126f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "mesh-vpc-security-group",
            "name_prefix": null,
            "owner_id": "866404760327",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0fdd7e18104518693"
          },
          "dependencies": [
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mesh-vpc-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866404760327:subnet/subnet-08f9eb2c7b931d7ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08f9eb2c7b931d7ff",
            "map_public_ip_on_launch": false,
            "owner_id": "866404760327",
            "tags": {
              "Name": "mesh-vpc-subnet"
            },
            "vpc_id": "vpc-0fdd7e18104518693"
          },
          "dependencies": [
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mesh-vpc-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866404760327:subnet/subnet-0fe7f95b15f4677c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fe7f95b15f4677c4",
            "map_public_ip_on_launch": false,
            "owner_id": "866404760327",
            "tags": {
              "Name": "mesh-vpc-subnet"
            },
            "vpc_id": "vpc-0fdd7e18104518693"
          },
          "dependencies": [
            "module.this.module.instances.aws_vpc.mesh-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.this.module.instances",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mesh-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866404760327:vpc/vpc-0fdd7e18104518693",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0564e72df9b8cbd87",
            "default_route_table_id": "rtb-0b8d199162a2d77d0",
            "default_security_group_id": "sg-0a1d067d733ee8742",
            "dhcp_options_id": "dopt-da093ebd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fdd7e18104518693",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b8d199162a2d77d0",
            "owner_id": "866404760327",
            "tags": {
              "Name": "mesh-vpc"
            }
          }
        }
      ]
    }
  ]
}